--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,55 @@
 
     <groupId>org.example</groupId>
     <artifactId>spring</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>guessnumber-game</module>
+        <module>number-game</module>
+        <module>core</module>
+    </modules>
+
+    <properties>
+        <maven-plugin.version>3.8.1 </maven-plugin.version>
+    </properties>
+
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+            <version>1.18.12</version>
+        </dependency>
+
+        <!-- slf4j dependency -->
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-api</artifactId>-->
+<!--            <version>1.7.30</version>-->
+<!--        </dependency>-->
+
+        <!-- logback classic dependency  -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>${maven-plugin.version}</version>
+                <configuration>
+                    <target>8</target>
+                    <source>8</source>
+                    <release>8</release>
+                </configuration>
             </plugin>
         </plugins>
     </build>
